최종 디자인 수정(2)

--- a/src/main/resources/templates/dept/main.html
+++ b/src/main/resources/templates/dept/main.html
@@ -16,7 +16,7 @@
         <div class="header">
           <h1>부서 관리</h1>
           <a href="/dept/create">
-            <button class="create-btn">부서 생성</button>
+            <button class="create-btn">새 부서 생성</button>
           </a>
         </div>
         <div class="tree-container">
