FE 부서 상세 정렬

--- a/src/main/resources/templates/dept/detail.html
+++ b/src/main/resources/templates/dept/detail.html
@@ -274,7 +274,7 @@
                   <div class="section1">
                     <h3>부서 미배정 사원</h3>
                   </div>
-                  <div class="emp-actions" style="margin-top: 10px">
+                  <div class="emp-actions">
                     <button type="submit" name="action" value="assignDept">
                       이 부서로 배정
                     </button>
