--- a/src/main/resources/static/css/dept.css
+++ b/src/main/resources/static/css/dept.css
@@ -782,7 +782,7 @@ main {
     gap: 8px;
     flex-wrap: nowrap;
     margin-bottom: 10px;
-    justify-content: flex-end;
+    justify-content: space-between;
     box-sizing: border-box;
 }
 
