--- a/src/main/resources/templates/dept/main.html
+++ b/src/main/resources/templates/dept/main.html
@@ -14,7 +14,7 @@
       <div th:replace="~{ sidebar.html::sidebar}"></div>
       <div class="container">
         <div class="header">
-          <h1>부서 관리</h1>
+            <div><h2>부서 관리</h2></div>
           <a href="/dept/create">
             <button class="create-btn">새 부서 생성</button>
           </a>
