최종 디자인 수정(5) - login 디자인 교체

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -10,8 +10,13 @@
 <body class="login-page"> <!-- body에 고유 클래스 추가 -->
 <div class="login-container">
     <div class="login-box">
-        <img src="/images/logo_login.png" alt="GGM 로고" class="logo" />
-        <h1>ESS시스템</h1>
+        <div class="logo-container">
+            <img src="/images/test.png" alt="AMS 로고" class="logo-main" />
+            <div class="logo-right">
+                <img src="/images/근태관리시스템2.png" alt="근태관리시스템" class="logo-subtitle" />
+                <img src="/images/full.png" alt="full" class="logo-full" />
+            </div>
+        </div>
         <form action="/login" method="post" class="idpwinput">
             <input type="text" name="username" placeholder="ID" required />
             <input type="password" name="password" placeholder="Password" required />
