--- a/src/main/resources/static/css/login.css
+++ b/src/main/resources/static/css/login.css
@@ -28,8 +28,35 @@ body.login-page {
     max-width: 350px;
 }
 
-.logo {
-    width: 300px;
+.logo-container {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    gap: 7px;
+    margin-bottom: 33px;
+}
+
+.logo-main {
+    width: 135px;
+    height: auto;
+}
+
+.logo-right {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 0px;
+}
+
+.logo-subtitle {
+    width: 160px;
+    height: auto;
+}
+
+.logo-full {
+    width: 160px;
+    height: auto;
 }
 
 .login-page h1 {
@@ -46,6 +73,11 @@ body.login-page {
     font-size: 16px;
     outline: none;
     box-sizing: border-box;
+    margin-bottom: 4px;
+}
+
+.login-page form input:last-of-type {
+    margin-bottom: 0;
 }
 
 .login-page form input:focus {
