--- a/src/main/resources/templates/approval/detail.html
+++ b/src/main/resources/templates/approval/detail.html
@@ -155,23 +155,6 @@
         <!-- 결재 정보 -->
         <div class="panel">
             <div class="title">결재 정보</div>
-
-            <div class="actions">
-                <!-- 승인 form -->
-                <form th:action="@{/approval/approve}" method="post" style="display:inline-block; margin-right:10px;">
-                    <input type="hidden" name="requestIds" th:value="${requestId}">
-                    <button type="submit" class="btn approval">승인</button>
-                </form>
-
-                <!-- 반려 form -->
-                <form th:action="@{/approval/reject}" method="post" style="display:inline-block;">
-                    <input type="hidden" name="requestIds" th:value="${requestId}">
-                    <label>반려사유</label>
-                    <input type="text" name="reason" placeholder="반려 사유 입력" required>
-                    <button type="submit" class="btn rejection">반려</button>
-                </form>
-            </div>
-
             <!-- 결재 내역 테이블 -->
             <table class="detail-table">
                 <thead>
@@ -204,6 +187,24 @@
                 </tr>
                 </tbody>
             </table>
+
+            <div class="actions">
+                <!-- 승인 form -->
+                <form th:action="@{/approval/approve}" method="post" style="display:inline-block; margin-right:10px;">
+                    <input type="hidden" name="requestIds" th:value="${requestId}">
+                    <button type="submit" class="btn approval">승인</button>
+                </form>
+
+                <!-- 반려 form -->
+                <form th:action="@{/approval/reject}" method="post" style="display:inline-block;">
+                    <input type="hidden" name="requestIds" th:value="${requestId}">
+                    <label>반려사유</label>
+                    <input type="text" name="reason" placeholder="반려 사유 입력" required>
+                    <button type="submit" class="btn rejection">반려</button>
+                </form>
+            </div>
+
+            <div class="jb-division-line"></div>
         </div>
 
         <!-- 반려사유 (반려된 경우만 표시) -->
